# discord-rs

./: Cargo.toml
src/: connection.rs  error.rs  lib.rs  model.rs  voice.rs
