[package]
name = "discord"
version = "0.8.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Client library for the Discord API"
readme = "README.md"
license = "MIT"
keywords = ["discord", "chat", "bot", "api", "voice"]

repository = "https://github.com/SpaceManiac/discord-rs"
documentation = "https://docs.rs/discord/0.8.0"

[features]
default = ["voice"]
voice = ["opus", "sodiumoxide"]

[dependencies]
hyper = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
websocket = "0.23"  # 0.17
bitflags = "1.1"
byteorder = "1.3"
log = "0.4.8"
base64-rs = "0.1.1"
flate2 = "1.0.11"
opus = { version = "0.2", optional = true }

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.sodiumoxide]
version = "0.0.12"
default-features = false
optional = true

[dependencies.multipart]
version = "0.16"
default-features = false
features = ["hyper", "client"]
